# easyPlayer

./: LICENSE  build.gradle  gradle.properties  settings.gradle  version.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/jx/easyplayer/: FdActivity.java  LauncherActivity.kt  MainActivity.java  MainActivity.kt  RecorderActivity.java  RecorderActivity.kt  TransformActivity.kt
app/src/main/java/cn/zxb/demo/: CameraActivity.kt  LauncherActivity.kt  MainActivity.kt  RecorderActivity.kt  TransformActivity.kt
app/src/main/java/cn/zxb/demo/bean/: PlayInfo.kt  (+1 more)
app/src/main/res/layout/: activity_camera.xml  activity_home.xml  activity_launcher.xml  activity_main.xml  activity_recorder.xml  activity_transform.xml  play_video_fragment.xml  scan_video_fragment.xml  video_item.xml
app/src/main/res/navigation/: navigation_home.xml
app/src/main/res/values/: strings.xml
easyplayerlib/: CMakeLists.txt  build.gradle
easyplayerlib/src/main/: AndroidManifest.xml
easyplayerlib/src/main/cpp/: camera.cpp  coder.cpp  easyPlayer.cpp  easyplayer-lib.cpp  opensles.cpp  recorder.cpp  transform.cpp  utils.cpp
easyplayerlib/src/main/cpp/3rd/include/: MemoryTrace.hpp
easyplayerlib/src/main/cpp/3rd/src/: MemoryTrace.cpp
easyplayerlib/src/main/cpp/include/: camera.h  coder.h  easyPlayer.h  opensles.h  threadsafe_queue.cpp  utils.h
easyplayerlib/src/main/cpp/include/libavcodec/: vda.h
easyplayerlib/src/main/cpp/include/libavformat/: avformat.h
easyplayerlib/src/main/java/cn/jx/easyplayerlib/events/: VideoEventListener.kt
easyplayerlib/src/main/java/cn/jx/easyplayerlib/player/: AbstractMediaPlayer.kt  EasyMediaPlayer.java  EasyMediaPlayer.kt  IMediaPlayer.java  IMediaPlayer.kt
easyplayerlib/src/main/java/cn/jx/easyplayerlib/recorder/: AbstractMediaRecorder.java  AbstractMediaRecorder.kt  EasyMediaRecorder.java  EasyMediaRecorder.kt  IMediaRecorder.java  IMediaRecorder.kt
easyplayerlib/src/main/java/cn/jx/easyplayerlib/transform/: TransformUtils.java  TransformUtils.kt
easyplayerlib/src/main/java/cn/jx/easyplayerlib/util/: EasyLog.kt  RawAssetsUtil.java  RawAssetsUtil.kt
easyplayerlib/src/main/java/cn/jx/easyplayerlib/view/: EasyVideoView.java  EasyVideoView.kt
easyplayerlib/src/main/java/cn/zxb/media/: OpenSSlDemo.java
easyplayerlib/src/main/java/cn/zxb/media/events/: VideoEventListener.kt
easyplayerlib/src/main/java/cn/zxb/media/player/: AbstractMediaPlayer.kt  EasyMediaPlayer.kt  IMediaPlayer.kt
easyplayerlib/src/main/java/cn/zxb/media/recorder/: AbstractMediaRecorder.kt  CameraRecorder.java  EasyMediaRecorder.kt  IMediaRecorder.kt
easyplayerlib/src/main/java/cn/zxb/media/transform/: TransformUtils.kt
easyplayerlib/src/main/java/cn/zxb/media/util/: EasyLog.kt  RawAssetsUtil.kt
easyplayerlib/src/main/java/cn/zxb/media/view/: EasyVideoView.kt
easyplayerlib/src/main/res/layout/: view_easy_video.xml
gradle/wrapper/: gradle-wrapper.properties
mvvm/: build.gradle
mvvm/src/main/: AndroidManifest.xml
mvvm/src/main/res/layout/: activity_base.xml  fragment_base.xml
opencv/: CMakeLists.txt  build.gradle
opencv/src/androidTest/java/com/zxb/engine/: ExampleInstrumentedTest.java
opencv/src/jnis/: Android.mk  face.cpp
opencv/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLRendererBase.java  JavaCameraView.java
opencv/src/main/res/raw/: lbpcascade_frontalface.xml
opencv/src/main/res/values/: strings.xml
opencv/src/test/java/com/zxb/engine/: ExampleUnitTest.java
(+21 files in other folders)
